[206811] cdamus - Adopt J2SE 5.0 in Transaction Component